--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ django-environ==0.11.2
 gunicorn==23.0.0
 packaging==24.1
 psycopg2==2.9.9
+python-dotenv==1.0.1
 soupsieve==2.6
 sqlparse==0.5.1
 typing_extensions==4.12.2
+whitenoise==6.7.0
